[metadata]
name = IP Obfuscator And Locator
version = 0.1.0
author = Peter McDonald
author_email = git@petermcdonald.co.uk
description = Simple tool to identify the Country an IP is registered in using the IPStack API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petermcd/ip-obfuscator-and-locater
project_urls =
    Bug Tracker = https://github.com/petermcd/ip-obfuscator-and-locater/issues
    Source = https://github.com/petermcd/ip-obfuscator-and-locater
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial

[options]
packages = find:
python_requires = >=3.8

[options.extras_require]
test = flake8, pytest, pytest-mock, pytest-cov
build = wheel; build;

[flake8]
exclude = venv/*, .tox/* ,.eggs/*
max_line_length = 120

[aliases]
test = pytest

[tool:pytest]
addopts = --cov --cov-report html --cov-report term-missing
